k8s/3-kubernetes-masterclass-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-masterclass-api-svc
spec:
  type: NodePort
  selector:
    app: kubernetes-masterclass-api-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-masterclass-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-masterclass-api-pod
  template:
    metadata:
      labels:
        app: kubernetes-masterclass-api-pod
    spec:
      containers:
      - name: kubernetes-masterclass-api
        image: iboukhenna/kubernetes-masterclass
        ports:
          - containerPort: 8080
