k8s/4-kubernetes-masterclass-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-masterclass-ui-svc
spec:
  type: NodePort
  selector:
    app: kubernetes-masterclass-ui-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-masterclass-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-masterclass-ui-pod
  template:
    metadata:
      labels:
        app: kubernetes-masterclass-ui-pod
    spec:
      containers:
      - name: kubernetes-masterclass-ui
        image: iboukhenna/kubernetes-masterclass-ui
        ports:
          - containerPort: 3000
